test/variables/static/bad.good
bad.chpl:2: error: the '@functionStatic' attribute can only be applied to variables in functions
bad.chpl:6: error: the '@functionStatic' attribute can only be applied to variables
bad.chpl:8: In method 'fn2':
bad.chpl:10: error: the '@functionStatic' attribute cannot be applied to variables in methods
